// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`inner tokenizer paragraph should be deep tokenized 1`] = `
Array [
  Object {
    "raw": "a paragraph of words \`first code\` normal text here \`code body\` *first italics* here me crying *italic body* here me crying **first bolds** some normal again **bold body** [Kiran Parajuli](https://kiranparajuli.com.np) ~~strikes body~~ here some",
    "tokens": Array [
      Object {
        "type": "text",
        "value": "a paragraph of words ",
      },
      Object {
        "type": "code",
        "value": "first code",
      },
      Object {
        "type": "text",
        "value": " normal text here ",
      },
      Object {
        "type": "code",
        "value": "code body",
      },
      Object {
        "type": "text",
        "value": " ",
      },
      Object {
        "type": "italic",
        "value": "first italics",
      },
      Object {
        "type": "text",
        "value": " here me crying ",
      },
      Object {
        "type": "italic",
        "value": "italic body",
      },
      Object {
        "type": "text",
        "value": " here me crying ",
      },
      Object {
        "type": "bold",
        "value": "first bolds",
      },
      Object {
        "type": "text",
        "value": " some normal again ",
      },
      Object {
        "type": "bold",
        "value": "bold body",
      },
      Object {
        "type": "text",
        "value": " ",
      },
      Object {
        "href": "https://kiranparajuli.com.np",
        "type": "link",
        "value": "Kiran Parajuli",
      },
      Object {
        "type": "text",
        "value": " ",
      },
      Object {
        "type": "strike",
        "value": "strikes body",
      },
      Object {
        "type": "text",
        "value": " here some",
      },
    ],
    "type": "paragraph",
  },
]
`;

exports[`inner tokenizer quote should deep tokenize quote with multiple depth 1`] = `
Array [
  Object {
    "depth": 1,
    "indent": "",
    "raw": "> > quote **one** with *two*",
    "tokens": Array [
      Object {
        "type": "text",
        "value": "quote ",
      },
      Object {
        "type": "bold",
        "value": "one",
      },
      Object {
        "type": "text",
        "value": " with ",
      },
      Object {
        "type": "italic",
        "value": "two",
      },
    ],
    "type": "quote",
  },
]
`;

exports[`inner tokenizer quote should deep tokenize quote with multiple depth 2`] = `
Array [
  Object {
    "depth": 2,
    "indent": "  ",
    "raw": "  > > > quote \`four\` with ~~five~~",
    "tokens": Array [
      Object {
        "type": "text",
        "value": "quote ",
      },
      Object {
        "type": "code",
        "value": "four",
      },
      Object {
        "type": "text",
        "value": " with ",
      },
      Object {
        "type": "strike",
        "value": "five",
      },
    ],
    "type": "quote",
  },
]
`;

exports[`inner tokenizer quote should deep tokenize quote with multiple depth 3`] = `
Array [
  Object {
    "depth": 3,
    "indent": "",
    "raw": "> > > > quote [link-title](link-url) with *two*",
    "tokens": Array [
      Object {
        "type": "text",
        "value": "quote ",
      },
      Object {
        "href": "link-url",
        "type": "link",
        "value": "link-title",
      },
      Object {
        "type": "text",
        "value": " with ",
      },
      Object {
        "type": "italic",
        "value": "two",
      },
    ],
    "type": "quote",
  },
]
`;

exports[`inner tokenizer quote should deep tokenize quote with zero depth 1`] = `
Array [
  Object {
    "depth": 0,
    "indent": "",
    "raw": "> quote **one** with *two*",
    "tokens": Array [
      Object {
        "type": "text",
        "value": "quote ",
      },
      Object {
        "type": "bold",
        "value": "one",
      },
      Object {
        "type": "text",
        "value": " with ",
      },
      Object {
        "type": "italic",
        "value": "two",
      },
    ],
    "type": "quote",
  },
]
`;

exports[`inner tokenizer quote should deep tokenize quote with zero depth 2`] = `
Array [
  Object {
    "depth": 0,
    "indent": "  ",
    "raw": "  > quote \`four\` with ~~five~~",
    "tokens": Array [
      Object {
        "type": "text",
        "value": "quote ",
      },
      Object {
        "type": "code",
        "value": "four",
      },
      Object {
        "type": "text",
        "value": " with ",
      },
      Object {
        "type": "strike",
        "value": "five",
      },
    ],
    "type": "quote",
  },
]
`;

exports[`inner tokenizer quote should deep tokenize quote with zero depth 3`] = `
Array [
  Object {
    "depth": 0,
    "indent": "",
    "raw": "> quote [link-title](link-url) with *two*",
    "tokens": Array [
      Object {
        "type": "text",
        "value": "quote ",
      },
      Object {
        "href": "link-url",
        "type": "link",
        "value": "link-title",
      },
      Object {
        "type": "text",
        "value": " with ",
      },
      Object {
        "type": "italic",
        "value": "two",
      },
    ],
    "type": "quote",
  },
]
`;
